--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,10 +124,13 @@
   <data name="logo_transparent" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_transparent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="banner-dashboard1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\banner-dashboard1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="banner_login" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\banner_login.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="banner-dashboard1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\banner-dashboard1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="an1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\an1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
